[gd_scene load_steps=11 format=2]

[ext_resource path="res://Juego/Naves/PosicionInicialEstela.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/NaveBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Naves/AnimacionPersonaje.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Naves/player_green.png" type="Texture" id=4]
[ext_resource path="res://Juego/Proyectiles/Laser/LaserBeam2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/Naves/Player.gd" type="Script" id=6]
[ext_resource path="res://Juego/Naves/MotorRuido.tscn" type="PackedScene" id=7]
[ext_resource path="res://Juego/Naves/Escudo/Escudo.tscn" type="PackedScene" id=9]
[ext_resource path="res://Juego/Naves/CamaraPlayer.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 40.9239

[node name="Player" instance=ExtResource( 2 )]
z_index = 50
z_as_relative = false
collision_layer = 1
collision_mask = 86
contacts_reported = 2
contact_monitor = true
can_sleep = false
linear_damp = 1.0
angular_damp = 10.0
script = ExtResource( 6 )

[node name="Sprite" parent="." index="0"]
modulate = Color( 1, 1, 1, 1 )
rotation = 1.5708
scale = Vector2( 1, 1 )
texture = ExtResource( 4 )

[node name="ColisonadorCuerpo" parent="." index="1"]
shape = SubResource( 1 )

[node name="PosicionInicialEstela" parent="." index="4" instance=ExtResource( 1 )]

[node name="Escudo" parent="." index="5" instance=ExtResource( 9 )]

[node name="CamaraPlayer" parent="." index="6" instance=ExtResource( 10 )]
position = Vector2( 1.19055, 0 )

[node name="AnimacionPersonaje" parent="." index="7" instance=ExtResource( 3 )]

[node name="LaserBeam2D" parent="." index="8" instance=ExtResource( 5 )]
position = Vector2( 42.4743, 0 )

[node name="MotorRuido" parent="." index="9" instance=ExtResource( 7 )]
[connection signal="animation_finished" from="AnimacionPersonaje" to="." method="_on_AnimacionPersonaje_animation_finished"]

[editable path="CanionBase"]
